--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MenuActivity"
+
+        <activity
+            android:name=".MenuActivity"
             android:parentActivityName=".HomeActivity">
+        </activity>
+
+        <activity android:name=".CheckoutActivity"
+            android:parentActivityName=".MenuActivity">
         </activity>
     </application>
 
