--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,15 +16,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".MenuActivity"
-            android:parentActivityName=".HomeActivity">
-        </activity>
-
-        <activity android:name=".CheckoutActivity"
-            android:parentActivityName=".MenuActivity">
-        </activity>
+            android:parentActivityName=".HomeActivity"></activity>
+        <activity
+            android:name=".CheckoutActivity"
+            android:parentActivityName=".MenuActivity"></activity>
+        <activity android:name=".DisplayItemActivity"></activity>
     </application>
 
 </manifest>
