--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:name=".Cart">
+
+
+
         <activity android:name=".HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +28,7 @@
             android:parentActivityName=".MenuActivity"></activity>
         <activity android:name=".DisplayItemActivity"
             android:parentActivityName=".MenuActivity"></activity>
-    </application>
+
+            </application>
 
 </manifest>
